# AIX

./: .gitignore  AIX.sln  AIX.vcxproj  AIX.vcxproj.filters  CMakeLists.txt  README.MD  build.sh
AIXBenchmarks/: Device.cpp  Model.cpp  Tensor.cpp  common.hpp  main.cpp
AIXExamples/XORApp/: main.cpp
AIXExamples/XORMetalApp/: CMakeLists.txt  main.cpp
AIXExamples/XORSequentialApp/: CMakeLists.txt  main.cpp
AIXLib/: aix.hpp  aixDevices.hpp
AIXTests/: ActivationTests.cpp  AutoGradTests.cpp  FunctionalTests.cpp  OptimizerTests.cpp
Targets/AIXBenchmarks/: CMakeLists.txt  Device.cpp  Model.cpp  Tensor.cpp  common.hpp  main.cpp
Targets/AIXExamples/XORApp/: CMakeLists.txt  main.cpp
Targets/AIXExamples/XORLayerApp/: CMakeLists.txt  main.cpp
Targets/AIXExamples/XORMPSApp/: CMakeLists.txt  aixDeviceMPS.hpp  main.cpp  mps.hpp  mps.mm
Targets/AIXExamples/XORMetalApp/: aixDeviceMetal.hpp  aixDeviceMetalShaders.hpp  main.cpp
Targets/AIXExamples/XOROpenMPApp/: CMakeLists.txt  aixDeviceOpenMP.hpp  main.cpp
Targets/AIXExamples/XORSequentialApp/: main.cpp
Targets/AIXLib/: CMakeLists.txt  aix.hpp  aixDeviceMetal.cpp  aixDeviceMetal.hpp  aixDeviceMetalCache.hpp  aixDeviceMetalShaders.hpp  aixDevices.cpp  aixDevices.hpp  aixFloat16.hpp  aixmodules.hpp
Targets/AIXTests/: ActivationTests.cpp  AutoGradTests.cpp  CMakeLists.txt  DeviceTests.cpp  Float16Tests.cpp  FunctionalTests.cpp  LossTests.cpp  OptimizerTests.cpp  TensorTests.cpp  TensorValueTests.cpp  Utils.hpp  main.cpp
Targets/XORApp/: main.cpp
Targets/XORLayerApp/: main.cpp
Targets/XORMetalApp/: CMakeLists.txt  aixDeviceMetal.hpp  aixDeviceMetalShaders.hpp  default.metal  main.cpp
Targets/XORSequentialApp/: main.cpp
x64/Debug/: AIX.exe.recipe  AIX.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/AIX.tlog/: AIX.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
